// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`web3 reducer account 1`] = `
Object {
  "account": "test",
  "network": 0,
}
`;

exports[`web3 reducer default 1`] = `
Object {
  "account": "0x0000000000000000000000000000000000000000",
  "network": 0,
}
`;

exports[`web3 reducer network 1`] = `
Object {
  "account": "test",
  "network": 123,
}
`;
